# diagram-forge

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  SECURITY.md  pyproject.toml  railway.toml  status.md
config/: default_config.yaml  design_tokens.yaml  pricing.yaml
data/: memory.db-shm
diagram-forge-plugin/: .mcp.json  .mcp.json.bak  CLAUDE.md
diagram-forge-plugin/.claude-plugin/: plugin.json
diagram-forge-plugin/agents/: context-gatherer.md
diagram-forge-plugin/commands/: create.md  iterate.md  templates.md  usage.md
docs/: BACKLOG.md  community-evaluator-guide.md  design.md  evaluation-runbook.md  intent.md  launch-plan.md  model-refresh-process.md  setup-and-customization.md  status.md  sync-skill-design.md  template-proposals.md
docs/_archive/: 2026-02-12-mcp-server-design-architecture.md
docs/adf/: design.md  discover-brief.md  intent.md
docs/diagram_forge_generated_result/: code.html
docs/diagram_forge_main_dashboard/: code.html
docs/diagram_forge_settings_panel/: code.html
evals/: benchmark_v1.yaml
scripts/: eval_diagram_models.py
src/diagram_forge/: __init__.py  __main__.py  config.py  cost_tracker.py  models.py  server.py  style_manager.py  template_engine.py
tests/: conftest.py  test_config.py  test_cost_tracker.py  test_server.py  test_templates.py
tests/test_providers/: test_gemini.py  test_openai.py  test_replicate.py
web/: DEPLOY.md
web/api/: Dockerfile  main.py  requirements.txt
web/frontend/: .env.local.example  package-lock.json  package.json  (+1 more)
(+38 files in other folders)
